--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       - name: GetCallerIdentity
         run: |
           aws sts get-caller-identity
+      - name: ListS3Buckets
+        run: |
+          aws s3 ls
   
       
   
